# gelu

./: .gitignore  CMakeLists.txt  README.md  readme.txt  ~ka-github.txt
data/: activations.csv  activations.xlsx
include/: Activation.hpp  FileUtils.hpp  pch.h
src/: Activation.cpp  FileUtils.cpp  main.cpp
